# Agentic_AI

./: langchain_Helloworld_project.ipynb
AgenticAI_RAG_Project/: LangChain_RAG_Project.ipynb  document.txt
explore-uv/: pyproject.toml
explore-uv/src/explore_uv/: hello.py
function_calling/: function_calling_zeeshan.ipynb
